--- a/manifest.json
+++ b/manifest.json
@@ -2,22 +2,16 @@
     "format_version": 2,
     "header": {
         "description": "True crafter mode for bedrock edition",
-        "name": "Vanilla Behavior Pack",
+        "name": "true Behavior Pack",
         "uuid": "ee649bcf-256c-4013-9068-6a802b89d756",
         "version": [ 0, 0, 1 ],
-        "min_engine_version": [ 1, 16, 200 ]
+        "min_engine_version": [ 1, 19, 50 ]
     },
     "modules": [
         {
             "description": "Example vanilla behavior pack",
             "type": "data",
             "uuid": "fa6e90c8-c925-460f-8155-c8a60b753caa",
-            "version": [0, 0, 1]
-        }
-    ],
-    "dependencies": [
-        {
-            "uuid": "66c6e9a8-3093-462a-9c36-dbb052165822",
             "version": [0, 0, 1]
         }
     ]
